--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="navbar">
                         <span><a href="https://imag1nationlab.github.io/home/">Home</a></span>
-                        <span><a href="https://imag1nationlab.github.io/gp1/">Graphic Design</a></span>
+                        <span><a href="https://imag1nationlab.github.io/gp/">Graphic Design</a></span>
                         <span><a href="https://imag1nationlab.github.io/uiux/">UI/UX</a></span>
                         <div class="dropdown">
                             <span class="dropbtn">Photography</span>
@@ -41,7 +41,7 @@
                                 <span><a href="https://imag1nationlab.github.io/fashion/">Fashion</a></span>
                             </div>
                           </div>
-                        <span><a href="https://imag1nationlab.github.io/videography/">Cinematography</span>
+                        <span><a href="https://imag1nationlab.github.io/cine/">Cinematography</span>
                     </div>
                 </div> 
             </div>
