--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
     document.getElementById("mySidenav").style.width = "0";
   }
   </script>  
+
     
-        <div class="gallery-container">
+        <div class="gallery-box">
             <div class="image-gallery">
                 <img src="https://live.staticflickr.com/65535/53858791105_60b5142754_z.jpg" alt="">
                 <img src="https://live.staticflickr.com/65535/53858739299_6fec283cbc_z.jpg" alt="">
