--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@ function closeNav() {
 });
     </script>
 
+      <script>
+        document.addEventListener('contextmenu', function(e) {
+            e.preventDefault();
+        });
+    </script>
+
 <div class="gallery-box">
     <div class="image-gallery">
         <img src="https://live.staticflickr.com/65535/53858791105_60b5142754_z.jpg" alt="">
