--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@ function closeNav() {
 
 <div class="gallery-box">
     <div class="image-gallery">
+        <img src="https://live.staticflickr.com/65535/54013218101_79096595a8_k.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/53858791105_60b5142754_z.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/53858739299_6fec283cbc_z.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/53858370321_d01ab49fb6_z.jpg" alt="">
@@ -129,6 +130,7 @@ function closeNav() {
     </div>
 
     <div class="image-gallery">
+        <img src="https://live.staticflickr.com/65535/54013218091_0ea8988adb_k.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/53858617958_d38b16edc7_z.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/53858790915_73a276d7b4_z.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/53858737934_6e26b07492_z.jpg" alt="">
