--- a/index.html
+++ b/index.html
@@ -50,12 +50,11 @@
                     <li><a href="https://imag1nationlab.github.io/fashion/">Fashion</a></li>
                     <li><a href="https://imag1nationlab.github.io/foodandbeverage/">F&B</a></li>
                     <li><a href="https://imag1nationlab.github.io/product/">Products</a></li>
-                    
                 </ul>
             </li>
 
             <li class="nav-item dropdown">
-                <a href="https://www.youtube.com/@Imagination-Studio0" class="dropdown-toggle" target="_blank">Videographer</a>
+                <a href="https://www.youtube.com/@Imagination-Studio0" class="dropdown-toggle">Videographer</a>
             
             </li>
 
@@ -122,29 +121,17 @@ function closeNav() {
 <div class="gallery-box">
     <div class="image-gallery">
         <img src="https://live.staticflickr.com/65535/54013218101_79096595a8_k.jpg" alt="">
+        <img src="https://live.staticflickr.com/65535/54013218091_0ea8988adb_k.jpg" alt="">
+        <img src="https://live.staticflickr.com/65535/53858617958_d38b16edc7_z.jpg" alt="">
+        <img src="https://live.staticflickr.com/65535/53858790915_73a276d7b4_z.jpg" alt="">
+        <img src="https://live.staticflickr.com/65535/53858790970_9b067ba4b6_z.jpg" alt="">
+        <img src="https://live.staticflickr.com/65535/53857475977_d9d8c97b26_z.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/53858791105_60b5142754_z.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/53858739299_6fec283cbc_z.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/53858370321_d01ab49fb6_z.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/53858737914_b96463cee9_z.jpg" alt="">
-        <img src="https://live.staticflickr.com/65535/53857474832_871c414743_z.jpg" alt="">
-    </div>
-
-    <div class="image-gallery">
-        <img src="https://live.staticflickr.com/65535/54013218091_0ea8988adb_k.jpg" alt="">
-        <img src="https://live.staticflickr.com/65535/53858617958_d38b16edc7_z.jpg" alt="">
-        <img src="https://live.staticflickr.com/65535/53858790915_73a276d7b4_z.jpg" alt="">
-        <img src="https://live.staticflickr.com/65535/53858737934_6e26b07492_z.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/53858616578_950209c779_z.jpg" alt="">
-        <img src="https://live.staticflickr.com/65535/53858737984_42c80ef573_z.jpg" alt="">
-    </div>
-
-    <div class="image-gallery">
-        <img src="https://live.staticflickr.com/65535/53858790970_9b067ba4b6_z.jpg" alt="">
-        <img src="https://live.staticflickr.com/65535/53857475977_d9d8c97b26_z.jpg" alt="">
-        <img src="https://live.staticflickr.com/65535/53858616423_ed848ff8a5_z.jpg" alt="">
-        <img src="https://live.staticflickr.com/65535/53858616508_7e6a892c3e_z.jpg" alt="">
-        <img src="https://live.staticflickr.com/65535/53858789630_22d91871fb_z.jpg" alt="">
-    </div>
+    </div>   
 </div>
 
 
