--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@ function closeNav() {
 
 <div class="gallery-box">
     <div class="image-gallery">
+        <img src="https://live.staticflickr.com/65535/54204241060_de721d24e3_o.jpg" alt="">
+        <img src="https://live.staticflickr.com/65535/54202919012_551ab1117d_o.jpg" alt="">
+        <img src="https://live.staticflickr.com/65535/54202918972_61b27b7ee8_o.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/54013218101_79096595a8_k.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/54013218091_0ea8988adb_k.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/53858617958_d38b16edc7_z.jpg" alt="">
