--- a/index.html
+++ b/index.html
@@ -120,15 +120,16 @@ function closeNav() {
 
 <div class="gallery-box">
     <div class="image-gallery">
+        <img src="https://live.staticflickr.com/65535/54252164386_5be3e04c8b_k.jpg" alt="">
+        <img src="https://live.staticflickr.com/65535/54251270532_d3abbf8e29_k.jpg" alt="">
+        <img src="https://live.staticflickr.com/65535/54252589485_0294cb7f3c_k.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/54204241060_de721d24e3_o.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/54202919012_551ab1117d_o.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/54202918972_61b27b7ee8_o.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/54204256544_833ae50542_o.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/54203108997_382228e526_o.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/53858617958_d38b16edc7_z.jpg" alt="">
-
         <img src="https://live.staticflickr.com/65535/53858790970_9b067ba4b6_z.jpg" alt="">
-      
         <img src="https://live.staticflickr.com/65535/53858791105_60b5142754_z.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/53858370321_d01ab49fb6_z.jpg" alt="">
         <img src="https://live.staticflickr.com/65535/53858737914_b96463cee9_z.jpg" alt="">
