--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                 <a href="" class="dropdown-toggle">Graphic Design</a>
                 <ul class="dropdown-menu">
                     <li><a href="https://imag1nationlab.github.io/Branding/">Branding</a></li>
-                    <li><a href="https://imag1nationlab.github.io/Banner-Poster-Standee-Brochure/">Banner/Poster/Standee/Brochure - Online/Offline</a></li>
+                    <li><a href="https://imag1nationlab.github.io/banner/">Banner</a></li>
+                    <li><a href="https://imag1nationlab.github.io/poster/">Poster</a></li>
+                    <li><a href="https://imag1nationlab.github.io/socialmedia/">Social Media</a></li>
                     <li><a href="https://imag1nationlab.github.io/Product-POD/">Product</a></li>
                 </ul>
             </li>
@@ -120,6 +122,8 @@ function closeNav() {
             e.preventDefault();
         });
     </script>
+
+
 
 <div class="gallery-box">
     <div class="image-gallery">
