--- a/index.html
+++ b/index.html
@@ -143,12 +143,14 @@ function closeNav() {
 
 <div class="gallery-box">
     <div class="image-gallery">
+        <img src="https://live.staticflickr.com/65535/54298052085_7c7fef4bd1_h.jpg" width="1000" height="1500" alt="DSC07849"/>
         <img src="https://live.staticflickr.com/65535/54252164386_3c8543903d_h.jpg" width="1000" height="1500" alt="DSC00757"/>
         <img src="https://live.staticflickr.com/65535/54204241060_5b1545dfd9_h.jpg" width="1000" height="1500" alt="_DSC1515"/>
         <img src="https://live.staticflickr.com/65535/53858539378_5166ffb599_h.jpg" width="1000" height="1500" alt="bridal"/>
         
     </div>   
     <div class="image-gallery">
+        <img src="https://live.staticflickr.com/65535/54297625531_fc801317f7_h.jpg" width="1000" height="1500" alt="DSC07839"/>
         <img src="https://live.staticflickr.com/65535/54251270532_7026092d07_h.jpg" width="1000" height="1500" alt="DSC00743"/>
         <img src="https://live.staticflickr.com/65535/54202919012_cb60f58695_h.jpg" width="1000" height="1500" alt="_DSC1514"/>
         <img src="https://live.staticflickr.com/65535/53858662124_eba0b0d046_h.jpg" width="1000" height="1500" alt="bridal"/>
@@ -156,6 +158,7 @@ function closeNav() {
        
     </div>   
     <div class="image-gallery">
+        <img src="https://live.staticflickr.com/65535/54297862649_571d3aca60_h.jpg" width="1000" height="1500" alt="DSC07844"/>
         <img src="https://live.staticflickr.com/65535/54252589485_7a3ee0d484_h.jpg" width="1000" height="1500" alt="DSC00734"/>
         <img src="https://live.staticflickr.com/65535/54202918972_cfcb781e3d_h.jpg" width="1000" height="1500" alt="_DSC1510"/>
         <img src="https://live.staticflickr.com/65535/53858711720_efdf0fd617_h.jpg" width="1000" height="1500" alt="bridal"/>
