--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ function closeNav() {
 
 <div class="gallery-box">
     <div class="image-gallery">
+        <img src="https://live.staticflickr.com/65535/54298314549_3864c5cf55_b.jpg" width="1000" height="1500" alt="DSC13185"/>
         <img src="https://live.staticflickr.com/65535/54298206270_bbba7aa716_h.jpg" width="1000" height="1500" alt="DSC08868"/>
         <img src="https://live.staticflickr.com/65535/54298052085_7c7fef4bd1_h.jpg" width="1000" height="1500" alt="DSC07849"/>
         <img src="https://live.staticflickr.com/65535/54252164386_3c8543903d_h.jpg" width="1000" height="1500" alt="DSC00757"/>
@@ -151,6 +152,7 @@ function closeNav() {
         
     </div>   
     <div class="image-gallery">
+        <img src="https://live.staticflickr.com/65535/54298327963_26816a887d_b.jpg" width="1000" height="1500" alt="DSC13180"/>
         <img src="https://live.staticflickr.com/65535/54298028653_706d85460a_h.jpg" width="1000" height="1500" alt="DSC08888"/>
         <img src="https://live.staticflickr.com/65535/54297625531_fc801317f7_h.jpg" width="1000" height="1500" alt="DSC07839"/>
         <img src="https://live.staticflickr.com/65535/54251270532_7026092d07_h.jpg" width="1000" height="1500" alt="DSC00743"/>
@@ -160,6 +162,7 @@ function closeNav() {
        
     </div>   
     <div class="image-gallery">
+        <img src="https://live.staticflickr.com/65535/54298327968_9c37af53bf_b.jpg" width="1000" height="1500" alt="DSC13183"/>
         <img src="https://live.staticflickr.com/65535/54298206275_0b71cc4781_h.jpg" width="1000" height="1500" alt="DSC08887"/>
         <img src="https://live.staticflickr.com/65535/54297862649_571d3aca60_h.jpg" width="1000" height="1500" alt="DSC07844"/>
         <img src="https://live.staticflickr.com/65535/54252589485_7a3ee0d484_h.jpg" width="1000" height="1500" alt="DSC00734"/>
