--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ function closeNav() {
         <img src="https://live.staticflickr.com/65535/54298327968_9c37af53bf_b.jpg" width="1000" height="1500" alt="DSC13183"/>
         <img src="https://live.staticflickr.com/65535/54298206275_0b71cc4781_h.jpg" width="1000" height="1500" alt="DSC08887"/>
         <img src="https://live.staticflickr.com/65535/54298052085_b4f755c18a_b.jpg" width="1000" height="1500" alt="DSC07849"/></a>
-        <img src="https://live.staticflickr.com/65535/53858711720_efdf0fd617_h.jpg" width="1000" height="1500" alt="bridal"/>
+        <img src="https://live.staticflickr.com/65535/54252589485_ee2b594924_b.jpg" width="683" height="1024" alt="DSC00734"/>
     </div>
       
 </div>
