--- a/index.html
+++ b/index.html
@@ -162,8 +162,9 @@ function closeNav() {
     <div class="image-gallery">
         <img src="https://live.staticflickr.com/65535/54298327968_9c37af53bf_b.jpg" width="1000" height="1500" alt="DSC13183"/>
         <img src="https://live.staticflickr.com/65535/54298206275_0b71cc4781_h.jpg" width="1000" height="1500" alt="DSC08887"/>
-        <img src="https://live.staticflickr.com/65535/54298052085_b4f755c18a_b.jpg" width="1000" height="1500" alt="DSC07849"/></a>
-        <img src="https://live.staticflickr.com/65535/54252589485_ee2b594924_b.jpg" width="683" height="1024" alt="DSC00734"/>
+        <img src="https://live.staticflickr.com/65535/54298052085_b4f755c18a_b.jpg" width="1000" height="1500" alt="DSC07849"/>
+        <img src="https://live.staticflickr.com/65535/54252589485_ee2b594924_b.jpg" width="1000" height="1500" alt="DSC00734"/>
+        <img src="https://live.staticflickr.com/65535/53858711720_0977cbef07_b.jpg" width="1000" height="1500" alt="Untitled"/>
     </div>
       
 </div>
